force-app/main/default/objects/Decision__c/Decision__c.object-meta.xml
<CustomObject>
    <label>Decision</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Decision Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Decision</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>