force-app/main/default/objects/Decision__c/fields/Approval_Note__c.field-meta.xml
<CustomField>
    <fullName>Approval_Note__c</fullName>
    <label>Approval Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>