force-app/main/default/objects/Decision__c/fields/Decided_By__c.field-meta.xml
<CustomField>
    <fullName>Decided_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decided By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DecisionsDecided</relationshipName>
    <type>Lookup</type>
</CustomField>