force-app/main/default/objects/Decision__c/fields/Decision_Key__c.field-meta.xml
<CustomField>
    <fullName>Decision_Key__c</fullName>
    <label>Decision Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>