force-app/main/default/objects/Decision__c/fields/Decision_Type__c.field-meta.xml
<CustomField>
    <fullName>Decision_Type__c</fullName>
    <label>Decision Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charge</fullName>
            </value>
            <value>
                <fullName>Discharge</fullName>
            </value>
            <value>
                <fullName>Curtail</fullName>
            </value>
            <value>
                <fullName>Buy Power</fullName>
            </value>
            <value>
                <fullName>Sell Power</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>