force-app/main/default/objects/Decision__c/fields/Objective_Mode__c.field-meta.xml
<CustomField>
    <fullName>Objective_Mode__c</fullName>
    <label>Objective Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Balanced</fullName>
            </value>
            <value>
                <fullName>Cost First</fullName>
            </value>
            <value>
                <fullName>Clean Energy First</fullName>
            </value>
            <value>
                <fullName>Reliability First</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>