force-app/main/default/objects/Decision__c/fields/Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Reasoning__c</fullName>
    <label>Reasoning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>