force-app/main/default/objects/Decision__c/fields/Rejected_Candidates__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Candidates__c</fullName>
    <label>Rejected Candidates (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>