force-app/main/default/objects/Decision__c/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scenario</label>
    <referenceTo>Scenario__c</referenceTo>
    <relationshipLabel>Decision</relationshipLabel>
    <relationshipName>Decision</relationshipName>
    <type>Lookup</type>
</CustomField>