force-app/main/default/objects/Decision__c/fields/Scenario_Phase__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Phase__c</fullName>
    <label>Scenario Phase</label>
    <length>20</length>
    <type>Text</type>
</CustomField>