force-app/main/default/objects/Decision__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>