force-app/main/default/objects/Decision__c/fields/Score_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Score_Breakdown__c</fullName>
    <label>Score Breakdown (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>