force-app/main/default/objects/Decision__c/fields/Step_Index__c.field-meta.xml
<CustomField>
    <fullName>Step_Index__c</fullName>
    <label>Step Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>