force-app/main/default/objects/Decision__c/validationRules/Confidence_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Confidence_Range</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
Confidence__c &lt; 0,
Confidence__c &gt; 100
)</errorConditionFormula>
    <errorMessage>Confidence must be between 0 and 100.</errorMessage>
</ValidationRule>